--- a/DemoCafe4IS24/MainWindow.xaml
+++ b/DemoCafe4IS24/MainWindow.xaml
@@ -5,12 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DemoCafe4IS24"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Окно авторизации" Height="450" Width="600">
+    <Grid Margin="10">
         <Grid.RowDefinitions>
+            <RowDefinition Height=".5*"/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width=".1*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Text="Логин" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"/>
+        <TextBlock Text="Пароль" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"/>
+        <PasswordBox Grid.Column="2" Grid.Row="3" Margin="10"/>
+        <TextBox Grid.Column="2" Grid.Row="1" Margin="10"/>
+        <Button x:Name="EnterBtn" Content="Войти" FontSize="30" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4"/>
     </Grid>
 </Window>
